<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_konfigurasi">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/header_config"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.90"
                    tools:ignore="NestedWeights">

                    <EditText
                        android:id="@+id/txtUserURL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_ip_port"
                        android:imeOptions="actionDone"
                        android:textColor="@color/colorBlack"
                        android:inputType="text"
                        tools:ignore="TextFields" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncUser"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_user"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncWilayah"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_wilayah"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncWilayahBaca"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_wilayah_baca"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncBlok"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_block"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncTarif"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_tarif"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSyncBPMA"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_sync_bpma"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/custom_shape"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btnSimpanConfig"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.00"
                    android:background="@drawable/background_button"
                    android:ems="10"
                    android:text="@string/btn_simpan"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:typeface="monospace"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnBackConfig"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.00"
                    android:background="@drawable/background_button"
                    android:ems="10"
                    android:text="@string/btn_kembali"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:typeface="monospace"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>